--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 /*CSS COMMON Ở ĐÂY*/
 
-
 .nt-container {
   max-width: 1160px;
 }
@@ -207,6 +206,46 @@
   column-gap: 23px;
 }
 
+.text {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  background-size: cover;
+  background-color: transparent;
+  background-image: linear-gradient(
+    180deg,
+    transparent 15%,
+    rgba(0, 0, 0, 0.9)
+  );
+  top: 0px;
+  right: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+.messageText {
+  font-style: italic;
+  color: whitesmoke;
+  font-size: 35px;
+  line-height: 45px;
+}
+.author{
+  margin-top: 25px;
+  font-style: inherit;
+  color: whitesmoke;
+  font-size: 35px;
+}
+
+.message {
+  margin-top: 50px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+
 .nt-album-item {
   break-inside: avoid;
 }
@@ -224,7 +263,7 @@
 .gallery {
   display: grid;
   grid-template-columns: repeat(13, 1fr);
-  grid-template-rows: repeat(12, minmax(0,1fr));
+  grid-template-rows: repeat(12, minmax(0, 1fr));
   grid-gap: 24px;
 }
 .gallery-item-1 {
@@ -295,6 +334,31 @@
   .nt-album-list {
     column-count: 2;
   }
+  .text{
+    padding: 20px;
+  }
+
+
+  .messageText {
+    font-style: italic;
+    color: whitesmoke;
+    font-size: 27px;
+    line-height: 32px;
+  }
+  .author{
+    margin-top: 25px;
+    font-style: inherit;
+    color: whitesmoke;
+    font-size: 32px;
+  }
+  
+  .message {
+    margin-top: 50px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  
   /*Grid Image*/
   .gallery {
     grid-template-columns: repeat(7, 1fr);
@@ -350,15 +414,66 @@
     grid-row-end: 22;
   }
 }
+@media only screen and (max-width: 768px) {
+  .text{
+    padding: 10px;
+  }
+
+  .messageText {
+    font-style: italic;
+    color: whitesmoke;
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .author{
+    margin-top: 25px;
+    font-style: inherit;
+    color: whitesmoke;
+    font-size: 25px;
+  }
+  
+  .message {
+    margin-top: 50px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+}
 
 /*Mobile*/
 @media only screen and (max-width: 672px) {
+
+  .text{
+    padding: 5px;
+  }
+
+  .messageText {
+    font-style: italic;
+    color: whitesmoke;
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .author{
+    margin-top: 10px;
+    font-style: inherit;
+    color: whitesmoke;
+    font-size: 17px;
+  }
+  
+  .message {
+    margin-top: 50px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
   .nt-album {
     margin-bottom: 60px;
   }
 
+
   .nt-album-list {
     column-gap: 13px;
+    column-count: 1;
   }
 
   .nt-album-item img {
@@ -416,4 +531,17 @@
     grid-row-start: 17;
     grid-row-end: 22;
   }
+}
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-color: transparent;
+  background-image: linear-gradient(
+    180deg,
+    transparent 15%,
+    rgba(0, 0, 0, 0.9)
+  );
+  top: 0px;
 }
