--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,7 @@
   background-size: cover;
   background-color: transparent;
   background-image: linear-gradient(
-    180deg,
+    190deg,
     transparent 15%,
     rgba(0, 0, 0, 0.9)
   );
@@ -445,23 +445,24 @@
 
   .text{
     padding: 5px;
+    width: 53%;
   }
 
   .messageText {
     font-style: italic;
     color: whitesmoke;
-    font-size: 14px;
-    line-height: 22px;
+    font-size: 12.5px;
+    line-height: 20px;
   }
   .author{
     margin-top: 10px;
     font-style: inherit;
     color: whitesmoke;
-    font-size: 17px;
+    font-size: 15px;
   }
   
   .message {
-    margin-top: 50px;
+    margin-top: 20px;
     position: relative;
     width: 100%;
     height: 100%;
